# find-jobs

./: .gitignore  AGENT.md  README.md  pyproject.toml
.github/workflows/: test.yml
extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js  sidepanel.html
src/find_jobs/: __init__.py  api.py  cli.py  comparison.py  evaluation_log.py  models.py  parser.py  profile.py  scoring.py
src/find_jobs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/find_jobs/scoring/: __init__.py  engine.py  fit.py  interview.py  shared.py  skills.py  specialization.py
src/find_jobs/scoring/fit/: __init__.py  competition.py  domain.py  level.py  patterns.py  role.py  stack.py  strength.py  years.py
src/find_jobs/scoring/skills/: __init__.py  engine.py  stack.py
tests/: conftest.py  test_api.py  test_cli.py  test_comparison.py  test_evaluation_log.py  test_extension_manifest.py  test_models.py  test_parser.py  test_profile.py  test_scoring.py
tests/fixtures/: affirm_backend_engineer.txt  apple_workflow_foundations.txt  berkeley_payments_senior_backend.txt  coalition_data_engineer_security.txt  genista_backend_engineer.txt  integrations_engineer.txt  kidoz_intermediate_backend_engineer.txt  narvar_distributed_systems.txt  picovoice_wellfound.txt  stripe_backend_engineer.txt  surveymonkey_zuora_developer.txt  versaterm_se2_dems.txt  workleap_sharegate_protect.txt  zepp_connected_partnerships.txt
