[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "find-jobs"
version = "0.1.0"
description = "CLI-first tool for evaluating job postings against a candidate profile."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1",
]

[project.scripts]
find-jobs = "find_jobs.cli:main"

[dependency-groups]
dev = [
    "black>=25.0,<26",
    "httpx>=0.28,<1",
    "pylint>=3.3,<4",
    "pytest>=8.0,<9",
    "uvicorn>=0.35,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pylint.format]
max-line-length = 100
